@@ -1,5 +1,10 @@
 ## CHANGELOG
 
+- __2012/02/??__: 0.9.4 release.
+    - Adding is_nor?, is_unk?, is_bos?, is_eos?, is_eon? to Natto::MeCabNode 
+    - Adding is_sysdic?, is_usrdic?, is_unkdic? to Natto::DictionaryInfo 
+    - Updating README to include description of DevKit install for RubyInstaller
+
 - __2012/02/14__: 0.9.3 release.
     - Updating structures, tests following the latest release of MeCab 0.993
     - Ending support for 0.98 MeCab.
